--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.2</version>
+		<version>3.4.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -19,6 +19,7 @@
 		<java.version>21</java.version>
 		<version-commons_io>2.16.1</version-commons_io>
 		<version-openfeign>4.1.3</version-openfeign>
+		<version-swagger>2.6.0</version-swagger>
 	</properties>
 
 	<dependencies>
@@ -30,7 +31,7 @@
 		<dependency>
 		  <groupId>org.springdoc</groupId>
 		  <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-	    <version>2.6.0</version>
+	    <version>${version-swagger}</version>
 		</dependency>
 
 		<dependency>
