Adding file upload in swagger

--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>3.3.5</version>
+		<relativePath/>
+		<!-- lookup parent from repository -->
 	</parent>
 
 	<groupId>com.automatizacao.cards</groupId>
@@ -14,12 +15,12 @@
 	<version>1.0.0</version>
 	<name>automatizacao-cards</name>
 	<description>Demo project for Spring Boot</description>
-	
+
 	<properties>
 		<java.version>21</java.version>
 		<version-commons_io>2.16.1</version-commons_io>
-		<version-openfeign>4.1.3</version-openfeign>
-		<version-swagger>2.6.0</version-swagger>
+		<version-openfeign>4.1.4</version-openfeign>
+		<version-swagger>2.1.0</version-swagger>
 	</properties>
 
 	<dependencies>
@@ -29,9 +30,9 @@
 		</dependency>
 
 		<dependency>
-		  <groupId>org.springdoc</groupId>
-		  <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-	    <version>${version-swagger}</version>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>${version-swagger}</version>
 		</dependency>
 
 		<dependency>
@@ -41,9 +42,9 @@
 		</dependency>
 
 		<dependency>
-    	<groupId>commons-io</groupId>
-    	<artifactId>commons-io</artifactId>
-    	<version>${version-commons_io}</version>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${version-commons_io}</version>
 		</dependency>
 
 		<dependency>
